--- a/ScreenshottoWord/.classpath
+++ b/ScreenshottoWord/.classpath
@@ -2,7 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Spritz"/>
 	<classpathentry kind="lib" path="C:/Users/Vishwa/Downloads/poi-ooxml-3.9.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Vishwa/Downloads/xmlbeans-2.5.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Vishwa/Downloads/poi-3.9.jar"/>
@@ -20,5 +19,7 @@
 	<classpathentry kind="lib" path="S:/Vishwadeep/cognizant-intelligent-test-scripter-1.1/lib/clib/poi-3.17/poi-scratchpad-3.17.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Vishwa/Downloads/dom4j-1.5.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Vishwa/Downloads/poi-ooxml-schemas-3.9.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vishwa/Downloads/java2word-3.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vishwa/Downloads/xstream-1.3.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
